Revision v110. All good with modbus.

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,6 +16,7 @@ lib_deps =
   bblanchon/ArduinoJson@^7.0.4
   olikraus/U8g2@^2.35.19
   arduino-libraries/ArduinoModbus@^1.0.9
+  arduino-libraries/ArduinoRS485@^1.1.0
   arduino-libraries/Arduino_PowerManagement@^1.0.0
   knolleary/PubSubClient@^2.8
 
